@@ -1,3 +1,8 @@
+r172 (05. 08. 2023):
+Loot Tracker: Fixed an issue where the tracker would hide even there is random loot on the map
+Hotline Miami Day 1: Fixed an issue where the black sedan sometimes did not spawn any loot and it wasn't reflected in the Loot Counter
+Hotline Miami Day 2: Fixed a crash
+
 r171 (04. 08. 2023):
 Ukrainian Prisoner: Fixed a crash
 The Bomb: Forest: Added achievement tracker for "Oppressor"
